--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -17,11 +17,11 @@ body {
 }
 .display-2 {
   font-family: 'Rubik', sans-serif;
-  font-size: 3rem;
+  font-size: 2.8rem;
   font-display: swap;
 }
 .display-2 > .mbr-iconfont {
-  font-size: 4.8rem;
+  font-size: 4.48rem;
 }
 .display-4 {
   font-family: 'Rubik', sans-serif;
@@ -59,9 +59,9 @@ body {
     line-height: calc( 1.4 * (2.1374999999999997rem + (4.25 - 2.1374999999999997) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-2 {
-    font-size: 2.4rem;
-    font-size: calc( 1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 2.24rem;
+    font-size: calc( 1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.63rem + (2.8 - 1.63) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
     font-size: 0.8rem;
@@ -1047,6 +1047,28 @@ section.lazy-placeholder:after {
 .cid-rTzZa0DIU8 .mbr-section-btn {
   color: #465052;
 }
+.cid-rTzZa0DIU8 H1 {
+  text-align: center;
+  color: #465052;
+}
+.cid-rTKirmcWQt {
+  padding-top: 45px;
+  padding-bottom: 15px;
+  background-color: #ffffff;
+}
+.cid-rTKirmcWQt .mbr-text {
+  color: #767676;
+}
+.cid-rTKirmcWQt h4 {
+  text-align: center;
+}
+.cid-rTKirmcWQt p {
+  text-align: center;
+}
+.cid-rTKirmcWQt .card-img span {
+  font-size: 96px;
+  color: #149dcc;
+}
 .cid-rTAXuPadGa {
   padding-top: 0px;
   padding-bottom: 15px;
@@ -1107,6 +1129,103 @@ section.lazy-placeholder:after {
 }
 .cid-rTAnJ19Y0m .card-title,
 .cid-rTAnJ19Y0m .card-img {
+  color: #465052;
+}
+.cid-rTI0zmGcQX {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rTI0zmGcQX .mbr-section-subtitle {
+  color: #767676;
+  text-align: center;
+  font-weight: 300;
+}
+.cid-rTI0zmGcQX .timeline-text-content {
+  padding: 2rem 2.5rem;
+  background: #efefef;
+  margin-right: 2rem;
+  transition: all .4s;
+}
+.cid-rTI0zmGcQX .timeline-text-content p {
+  margin-bottom: 0;
+}
+.cid-rTI0zmGcQX .timeline-element {
+  margin-bottom: 50px;
+  position: relative;
+  word-wrap: break-word;
+  word-break: break-word;
+  display: -webkit-flex;
+  flex-direction: row;
+  -webkit-flex-direction: row;
+}
+.cid-rTI0zmGcQX .timeline-element:hover .timeline-text-content {
+  box-shadow: 0 7px 20px 0px rgba(0, 0, 0, 0.08);
+  transition: all .4s;
+}
+.cid-rTI0zmGcQX .reverse {
+  flex-direction: row-reverse;
+  -webkit-flex-direction: row-reverse;
+}
+.cid-rTI0zmGcQX .reverse .timeline-text-content {
+  margin-left: 2rem;
+  margin-right: 0;
+}
+.cid-rTI0zmGcQX .iconsBackground {
+  position: absolute;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  display: inline-block;
+  background-color: #efefef;
+  top: 20px;
+  margin-left: -30px;
+}
+.cid-rTI0zmGcQX .mbr-iconfont {
+  position: absolute;
+  text-align: center;
+  font-size: 35px;
+  display: inline-block;
+  z-index: 3;
+  top: 13px;
+  left: 13px;
+}
+.cid-rTI0zmGcQX .separline:before {
+  top: 20px;
+  bottom: 0;
+  position: absolute;
+  content: "";
+  width: 2px;
+  background-color: #efefef;
+  left: calc(50% - 1px);
+  height: calc(100% + 4rem);
+}
+@media (max-width: 768px) {
+  .cid-rTI0zmGcQX .iconsBackground {
+    left: 1.5rem;
+  }
+  .cid-rTI0zmGcQX .separline:before {
+    left: calc(1.5rem - 1px);
+  }
+  .cid-rTI0zmGcQX .timeline-text-content {
+    margin-left: 3rem !important;
+    margin-right: 0 !important;
+  }
+  .cid-rTI0zmGcQX .reverse .timeline-text-content {
+    margin-right: 0 !important;
+  }
+}
+.cid-rTI0zmGcQX .reverseTimeline {
+  display: flex;
+  flex-direction: column-reverse;
+}
+.cid-rTI0zmGcQX .mbr-section-title {
+  color: #149dcc;
+}
+.cid-rTI0zmGcQX .mbr-timeline-title {
   color: #465052;
 }
 .cid-rTACK61emZ {
